Fix CORS: use environment variable instead of hardcoded URL
- Remove hardcoded frontend URL from SecurityConfig
- Use cors.allowed-origins from application.yaml
- Support multiple origins with comma separation
- Remove trailing slash from CORS configuration

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>